# protobug

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: zizmor.yml
.github/workflows/: checks.yml  release.yml
src/protobug/: __init__.py  __main__.py  _core.py  _reader.py  _writer.py
tests/: model.py  test_core.py  test_reader.py  test_writer.py
