[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "protobug"
dynamic = ["version"]
description = "A pythonic protobuf library using dataclasses and enums"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["protobuf"]
license = { file = "LICENSE" }
authors = [
  { name = "Simon Sawicki", email = "grub4k@grub4k.xyz" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Grub4K/protobug?tab=readme-ov-file"
Repository = "https://github.com/Grub4K/protobug"
Issues = "https://github.com/Grub4K/protobug/issues"
Source = "https://github.com/Grub4K/protobug"
Funding = "https://github.com/sponsors/Grub4K"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/protobug/_version.py"

[tool.hatch.envs.default]
dependencies = ["pre-commit"]

[tool.hatch.envs.hatch-test]
extra-args = [
  "--tb=short",
]
randomize = false
parallel = false
retries = 0

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy",
  "pytest",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --disallow-untyped-defs --check-untyped-defs --non-interactive {args:src/protobug tests}"

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
run-cov = "echo Code coverage not implemented && exit 1"

[[tool.hatch.envs.hatch-test.matrix]]
python = [
  "3.9",
  "3.10",
  "3.11",
  "3.12",
  "3.13",
]

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff==0.7.*"]
config-path = "pyproject.toml"

[tool.ruff.lint]
select = [
  "C4",
  "E",
  "F",
  "I",
  "PLC",
  "PLE",
  "PLW",
  "PYI",
  "RET",
  "RUF",
  "SIM",
  "TD",
  "TID",
  "W",
]
ignore = [
  "TD003",
  "E402",
  "E501",
  "PLR09",
]

[tool.ruff.lint.per-file-ignores]
"src/protobug/__init__.py" = [
  "F401",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
force-single-line = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
